--- a/php/.htaccess
+++ b/php/.htaccess
@@ -419,10 +419,10 @@ AddType application/x-shockwave-flash       swf
 #   RewriteRule ^ http://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 # </IfModule>
 
-# <IfModule mod_rewrite.c>
-#   RewriteCond %{HTTP_HOST} ^retmco-shungite.rhcloud.com$
-#   RewriteRule (.*)$ http://www.themco.ca/$1 [R=301,L]
-# </IfModule>
+<IfModule mod_rewrite.c>
+  RewriteCond %{HTTP_HOST} ^retmco-shungite.rhcloud.com$
+  RewriteRule (.*)$ http://www.themco.ca/$1 [R=301,L]
+</IfModule>
 
 # ----------------------------------------------------------------------
 # Built-in filename-based cache busting
