--- a/php/.htaccess
+++ b/php/.htaccess
@@ -11,6 +11,8 @@ RewriteRule ^plugins/(.*) /wp-content/plugins/$1 [QSA,L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
+RewriteCond %{HTTP_HOST} ^retmco-shungite.rhcloud.com$
+RewriteRule (.*)$ http://www.themco.ca/$1 [R=301,L]
 </IfModule>
 
 # END WordPress
